--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ items:
           containers:
             - name: mongodb-quarkus
               # Replace this with the built image name
-              image: quay.io/bmozaffa/mongodb-quarkus
+              image: quay.io/jary/mongodb-quarkus
               imagePullPolicy: Always
               ports:
                 - containerPort: 8080
